--- a/WinTee.vcxproj
+++ b/WinTee.vcxproj
@@ -61,6 +61,9 @@
       <AdditionalDependencies>kernel32.lib;user32.lib;shlwapi.lib;chkstk.obj;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
     </Link>
+    <PreBuildEvent>
+      <Command>for /f %%V in ('git describe --long') do for /f "tokens=3" %%C in (git-describe.h) do if not "%%V" == %%C echo #define GIT_DESCRIBE "%%V" &gt; git-describe.h</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -83,12 +86,18 @@
       <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
     </Link>
+    <PreBuildEvent>
+      <Command>for /f %%V in ('git describe --long') do for /f "tokens=3" %%C in (git-describe.h) do if not "%%V" == %%C echo #define GIT_DESCRIBE "%%V" &gt; git-describe.h</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinTee.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="git-describe.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
